--- a/css/style.css
+++ b/css/style.css
@@ -2111,6 +2111,6 @@ section.slider {
 
 
 /* --------------about-house------- */
-.technology-wrap {
-    max-width: 1680px;
-}
+/*.technology-wrap {*/
+/*    max-width: 1680px;*/
+/*}*/
